--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ button {
   <body>
 	<div class="d-flex justify-content-center flex-column">
 		<img class="mw-100" src="./zephyr_invite.png">
-		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/"><button class="w-100 mb-3" style="background-color: #b0b0b0;">RSVP</button></a>
+		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/" class="mb-5"><button class="w-100" style="background-color: #b0b0b0;">RSVP</button></a>
 	</div>
   </body>
 
 </html>
+
