--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@ button {
   </head>
   <body>
 	<div class="d-flex justify-content-center flex-column">
+		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/" class="mt-3"><button class="w-100" style="background-color: #b0b0b0;">RSVP</button></a>
 		<img class="mw-100" src="./zephyr_invite.png">
-		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/" class="mb-5"><button class="w-100" style="background-color: #b0b0b0;">RSVP</button></a>
 	</div>
   </body>
-
-</html>
-
+</html
