--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@ button {
   </head>
   <body>
 	<div class="d-flex justify-content-center flex-column">
-		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/" class="mt-3"><button class="w-100" style="background-color: #b0b0b0;">Click to RSVP</button></a>
+		<a href="https://ig.me/j/AbbpGdy_1zfjgI9X/" class="mt-3"><button class="w-100" style="background-color: #b0b0b0;">Click to RSVP <br> <small>(Open in external browser on apple)</small></button></a>
 		<img class="mw-100" src="./zephyr_invite.png">
 	</div>
   </body>
 </html
-
